--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-3 left-side">
+        <ul class="list-group" id="category-list"></ul>
+      </div>
+      <div class="col-9 right-side">
+        <div class="cards" id="cards-grid">
+
+        </div>
+      </div>
+    </div>
+  </div>
     <script type="text/javascript" src="app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
