--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
   <div class="container">
     <div class="row">
+      <nav class="navbar bg-light">
+        <div class="container-fluid">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Nombre del producto" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
+        </div>
+      </nav>
       <div class="col-3 left-side">
         <ul class="list-group" id="category-list"></ul>
       </div>
