--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         </div>
       </nav>
       <div class="col-3 left-side">
-        <ul class="list-group" id="category-list"></ul>
+        <div id="liveAlertPlaceholder"></div>
+        <ul class="list-group" id="category-list">
+          <li class="list-group-item active" aria-current="true">todos los productos</li>
+        </ul>
       </div>
       <div class="col-9 right-side">
         <div class="cards" id="cards-grid">
