--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="row">
       <nav class="navbar bg-light">
         <div class="container-fluid">
+          <a class="navbar-brand">Bsale Test</a>
           <form class="d-flex" role="search" id="form">
             <input class="form-control me-2" type="search" placeholder="Nombre del producto" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
