front improved, sticky left side, cards responsive, and better alert message

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 <body>
   <div class="container">
     <div class="row">
-      <nav class="navbar bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand">Bsale Test</a>
-          <form class="d-flex" role="search" id="form">
-            <input class="form-control me-2" type="search" placeholder="Nombre del producto" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Buscar</button>
-          </form>
-        </div>
-      </nav>
-      <div class="col-3 left-side">
-        <div id="liveAlertPlaceholder"></div>
+      <div class="col-lg-3 col-md-3 col-sm-4 col-4 left-side">
+        <h1>Bsale Test</h2>
+        <br>
         <ul class="list-group" id="category-list">
           <li class="list-group-item active" aria-current="true">todos los productos</li>
         </ul>
       </div>
-      <div class="col-9 right-side">
+      <div class="col-lg-9 col-md-9 col-sm-8 col-8 right-side">
+        <nav class="navbar bg-light">
+          <form class="d-flex" role="search" id="form">
+            <input class="form-control me-2" type="search" placeholder="Nombre del producto" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
+        </nav>
+        <div id="liveAlertPlaceholder"></div>
+        <br>
         <div class="cards" id="cards-grid">
 
         </div>
